--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^5.1.0",
+    "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.10"
   }
